--- a/templates/index.html
+++ b/templates/index.html
@@ -42,14 +42,15 @@
                     <li class="menu-item-has-children dropdown">
                        <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-users"></i>Autores</a>
                        <ul class="sub-menu children dropdown-menu">
-                           <li><i class="fa fa-table"></i><a href="#">Listado de Autores</a></li>
+                           <li><i class="fa fa-pencil"></i><a href="{% url 'libro:crear_autor' %}">Registro de Autores</a></li>
+                           <li><i class="fa fa-table"></i><a href="{% url 'libro:listar_autor' %}">Listado de Autores</a></li>
                        </ul>
                     </li>
                     <li class="menu-item-has-children dropdown">
                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-book"></i>Libros</a>
                        <ul class="sub-menu children dropdown-menu">
                            
-                           <li><i class="fa fa-table"></i><a href="#">Listado de Libros</a></li>
+                           <li><i class="fa fa-table"></i><a href="{% url 'libro:listado_libros' %}">Listado de Libros</a></li>
                        </ul>
                     </li> 
                     {% endif %}
@@ -88,7 +89,7 @@
                         <div class="user-menu dropdown-menu">
                             <a class="nav-link" href="#"><i class="fa fa- user"></i>Perfil</a>
                             <a class="nav-link" href="#"><i class="fa fa -cog"></i>Administración</a>
-                            <a class="nav-link" href="#"><i class="fa fa-power -off"></i>Logout</a>
+                            <a class="nav-link" href="{% url 'logout' %}"><i class="fa fa-power -off"></i>Logout</a>
                         </div>
                     </div>
 
