--- a/templates/libro/autor/listar_autor.html
+++ b/templates/libro/autor/listar_autor.html
@@ -1,55 +1,48 @@
 {% extends 'index.html' %}
-{% load staticfiles %}
+
 {% block titulo %}
-Biblioteca.dev | Listado de Autores
+  Biblioteca.dev | Listado de Autores
 {% endblock titulo %}
-{% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/lib/datatable/dataTables.bootstrap.min.css' %}">
-{% endblock extra_css %}
+
 {% block body %}
-<div class="card">
-  <div class="card-header">
-    <div class="row">
-      <div class="col-md-8">
-        <strong class="card-title">Listado de Autores</strong>
+
+  {% if autores %}
+      <div class="card">
+          <div class="card-header">
+              <strong class="card-title">Listado de Autores</strong>
+          </div>
+          <div class="table-stats order-table ov-h">
+              <table class="table">
+                  <thead>
+                      <tr>
+                        <th>ID</th>
+                        <th>Nombres</th>
+                        <th>Apellidos</th>
+                        <th>Nacionalidad</th>
+                        <th>Descripcion</th>
+                        <th>Opciones</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                    {% for autor in autores %}
+                      <tr>
+                        <td>{{ autor.id }}</td>
+                        <td>{{ autor.nombre }}</td>
+                        <td>{{ autor.apellidos }}</td>
+                        <td>{{ autor.nacionalidad }}</td>
+                        <td>{{ autor.descripcion }}</td>
+                        <td>
+                          <a href="{% url 'libro:editar_autor' autor.id %}" class="btn btn-primary">Editar</a>
+                          <a href="{% url 'libro:eliminar_autor' autor.id %}" class="btn btn-danger">Eliminar</a>
+                        </td>
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+              </table>
+          </div>
       </div>
-      <div class="col-md-4">
-        <button type="button" class="btn btn-primary"
-          onclick="abrir_modal_creacion('{% url 'libro:crear_autor' %}');"> REGISTRAR AUTOR</button>
-      </div>
-    </div>
-
-  </div>
-  <div class="table-stats order-table ov-h">
-    <table id="tabla_autores" class="table">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Nombres</th>
-          <th>Apellidos</th>
-          <th>Nacionalidad</th>
-          <th>Descripcion</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
-  </div>
-</div>
-<div class="modal fade" id="creacion" role="dialog">
-
-</div>
-<div class="modal fade" id="edicion" role="dialog">
-
-</div>
-<div class="modal fade" id="eliminacion" role="dialog">
-
-</div>
-
+      {% else %}
+        <h1>No existen autores registrados</h1>
+      {% endif %}
 
 {% endblock body %}
-{% block extrajs %}
-<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-<script src="{% static 'js/lib/data-table/dataTables.bootstrap.min.js' %}"></script>
-<script src="{% static 'js/libro/autor.js' %}"></script>
-{% endblock extrajs %}
