--- a/templates/libro/libro/crear_libro.html
+++ b/templates/libro/libro/crear_libro.html
@@ -1,23 +1,20 @@
 <div class="modal-dialog modal-lg" role="document">
   <div class="modal-content">
-    <div class="modal-header">
-      <h2 class="modal-title">Creacion de Libro</h2>
-      <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <form id="form_creacion" action="{% url 'libro:crear_libro' %}" method="POST">
-      {% csrf_token %}
-      <div class="modal-body">
-        <div id="errores">
-        
-        </div>
-        {{ form.as_p }}
+      <div class="modal-header">
+          <h2 class="modal-title">Edición de Libro: {{ object }}</h2>
+          <button class="close" type="button" data-dismiss = "modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+          </button>
       </div>
-      <div class="modal-footer">
-        <button class="btn btn-danger" type="button" onclick="cerrar_modal_creacion();">Cancelar</button>
-        <button id="boton_creacion" class="btn btn-primary" type="button" onclick="registrar();">Confirmar</button>
-      </div>
-    </form>
+      <form id="form_edicion"  action="{% url 'libro:crear_libro' %}" method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="modal-body">               
+              {{ form.as_p }}
+          </div>
+          <div class="modal-footer">
+              <button class="btn btn-danger" type="button" data-dismiss="modal">Cancelar</button>
+              <button class="btn btn-primary" type="submit" >Confirmar</button>
+          </div>
+      </form>        
   </div>
 </div>
